mail-mta/{postfix,nullmailer}: Set version on provides

--- a/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
+++ b/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
@@ -41,7 +41,7 @@ requires:
   category: sys-libs
 provides:
 - name: mta-service
-  version: '>=0'
+  version: '1'
   category: virtual
 annotations:
   subsets:
