--- a/packages/atoms/base-net2/mail-mta/nullmailer/definition.yaml
+++ b/packages/atoms/base-net2/mail-mta/nullmailer/definition.yaml
@@ -16,7 +16,7 @@ requires:
   category: virtual
 provides:
 - name: mta-service
-  version: '>=0'
+  version: '1'
   category: virtual
 annotations:
   subsets:
