portage-converter/base-net2.yaml: Fix provides

--- a/portage-converter/base-net2.yaml
+++ b/portage-converter/base-net2.yaml
@@ -178,6 +178,7 @@ artefacts:
     provides:
       - category: virtual
         name: mta-service
+        version: "1"
   uses:
     disabled:
       - ldap
@@ -210,6 +211,7 @@ artefacts:
     provides:
       - category: virtual
         name: mta-service
+        version: "1"
   uses:
     disabled:
       - test
