mail-mta/postfix: Add conflict to nullmailer

--- a/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
+++ b/packages/atoms/base-net2/mail-mta/postfix/definition.yaml
@@ -39,9 +39,13 @@ requires:
 - name: pam
   version: '>=0'
   category: sys-libs
+conflicts:
+- name: nullmailer
+  version: '>=0'
+  category: mail-mta
 provides:
 - name: mta-service
-  version: '1'
+  version: "1"
   category: virtual
 annotations:
   subsets:
