app-text-1.0/scrollkeeper-dtd: Update finalize

--- a/packages/atoms/base-gnome3/app-text-1.0/scrollkeeper-dtd/finalize.yaml
+++ b/packages/atoms/base-gnome3/app-text-1.0/scrollkeeper-dtd/finalize.yaml
@@ -4,7 +4,13 @@ shell:
 install:
 - DTD_FILE="scrollkeeper-omf.dtd" DOC_TYPE=public DOC_DESCR="-//OMF//DTD Scrollkeeper
   OMF Variant V1.0//EN" DTD_FILE=usr/share/xml/scrollkeeper/dtds/${DTD_FILE} TARGET_CATALOG=etc/xml/catalog
-  whip h xmlcatalog.cat_install
+  whip h xmlcatalog.cat_install || true
 - DTD_FILE="scrollkeeper-omf.dtd" SRC_URI="http://scrollkeeper.sourceforge.net/dtds/scrollkeeper-omf-1.0/${DTD_FILE}"
   DOC_TYPE=system DOC_DESCR="${SRC_URI}" DTD_FILE=usr/share/xml/scrollkeeper/dtds/${DTD_FILE}
-  TARGET_CATALOG=etc/xml/catalog whip h xmlcatalog.cat_install
+  TARGET_CATALOG=etc/xml/catalog whip h xmlcatalog.cat_install || true
+uninstall:
+- >-
+  DTD_FILE="scrollkeeper-omf.dtd"
+  DTD_FILE=usr/share/xml/scrollkeeper/dtds/${DTD_FILE}
+  TARGET_CATALOG=etc/xml/catalog
+  whip h xmlcatalog.cat_remove || true
