virtual/libusb: Force using slot

--- a/packages/atoms/base-multimedia3/virtual/libusb/definition.yaml
+++ b/packages/atoms/base-multimedia3/virtual/libusb/definition.yaml
@@ -20,7 +20,7 @@ labels:
     abi_s390_64
   RDEPEND: '|| ( >=dev-libs/libusb-compat-0.1.5-r2[-mgorny(-)] >=sys-freebsd/freebsd-lib-9.1-r11[usb,-mgorny(-)]
     )'
-  emerge.packages: virtual/libusb
+  emerge.packages: virtual/libusb:0
   kit: core-kit
   original.package.name: virtual/libusb
   original.package.slot: "0"
