--- a/packages/atoms/base-multimedia3/media-video/vlc/build.yaml
+++ b/packages/atoms/base-multimedia3/media-video/vlc/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp -vf vlc-*.patch /var/git/meta-repo/kits/media-kit/media-video/vlc/files
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
