--- a/packages/atoms/base-gnome2/media-libs-0.3/grilo/build.yaml
+++ b/packages/atoms/base-gnome2/media-libs-0.3/grilo/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race13
+- name: totem-pl-parser
   version: '>=0'
-  category: seed
+  category: dev-libs
