toolchain/base-gnome2: Update rdeps

--- a/packages/toolchain/base-gnome2/definition.yaml
+++ b/packages/toolchain/base-gnome2/definition.yaml
@@ -39,6 +39,9 @@ requires:
   - name: libgdata
     category: dev-libs
     version: '>=0'
+  - name: totem-pl-parser
+    category: dev-libs
+    version: '>=0'
   - name: pyatspi
     category: dev-python
     version: '>=0'
