portage-converter/base-net2.yaml: Add conflicts on postfix, nullmailer

--- a/portage-converter/base-net2.yaml
+++ b/portage-converter/base-net2.yaml
@@ -179,6 +179,10 @@ artefacts:
       - category: virtual
         name: mta-service
         version: "1"
+    conflicts:
+      - category: mail-mta
+        name: nullmailer
+        version: ">=0"
   uses:
     disabled:
       - ldap
@@ -212,6 +216,10 @@ artefacts:
       - category: virtual
         name: mta-service
         version: "1"
+    conflicts:
+      - category: mail-mta
+        name: postfix
+        version: ">=0"
   uses:
     disabled:
       - test
