app-portage/eix: Add finalize and update rdeps

--- a/packages/atoms/portage-tools/app-portage/eix/definition.yaml
+++ b/packages/atoms/portage-tools/app-portage/eix/definition.yaml
@@ -17,9 +17,9 @@ requires:
 - name: libintl
   version: '>=0'
   category: virtual
-- name: tmpfiles
+- name: portage
   version: '>=0'
-  category: virtual
+  category: sys-apps
 annotations:
   subsets:
     rules:
