portage-converter/base-lang: Add dev-lua/lua:5.3

--- a/portage-converter/base-lang.yml
+++ b/portage-converter/base-lang.yml
@@ -120,6 +120,7 @@ artefacts:
   - dev-lua/lpeg
   - dev-lua/luasocket
   - dev-lua/luaexpat
+  - dev-lua/lua:5.3
 
 - tree: packages/atoms/base-lang
   mutations:
