toolchain/base-lang: Update rdeps

--- a/packages/toolchain/base-lang/definition.yaml
+++ b/packages/toolchain/base-lang/definition.yaml
@@ -30,6 +30,9 @@ requires:
   - name: xxhash
     category: dev-libs
     version: '>=0'
+  - name: lua
+    category: dev-lua-5.3
+    version: '>=0'
   - name: LuaBitOp
     category: dev-lua
     version: '>=0'
@@ -137,6 +140,9 @@ requires:
     version: '>=0'
   - name: gdb
     category: sys-devel
+    version: '>=0'
+  - name: fortran
+    category: virtual
     version: '>=0'
   - name: ruby-ssl
     category: virtual
