portage-converter/base-lang.yml: Add virtual/fortran

--- a/portage-converter/base-lang.yml
+++ b/portage-converter/base-lang.yml
@@ -345,6 +345,14 @@ artefacts:
     - dev-lang/lazarus
 
 
+- tree: packages/atoms/base-lang
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: seed
+          name: macaroni-funtoo-race8
+  packages:
+    - virtual/fortran
 
 include_layers:
 - layers/macaroni-funtoo-race8.yaml
