toolchain/base-xorg2: Update rdeps

--- a/packages/toolchain/base-xorg2/definition.yaml
+++ b/packages/toolchain/base-xorg2/definition.yaml
@@ -108,6 +108,9 @@ requires:
   - name: libXrandr
     category: x11-libs
     version: '>=0'
+  - name: libXtst
+    category: x11-libs
+    version: '>=0'
   - name: libXv
     category: x11-libs
     version: '>=0'
