net-libs-0.7/rest: Move to race base-gtk2

--- a/packages/atoms/base-gtk2/net-libs-0.7/rest/definition.yaml
+++ b/packages/atoms/base-gtk2/net-libs-0.7/rest/definition.yaml
@@ -2,9 +2,9 @@ name: rest
 version: 0.8.1
 category: net-libs-0.7
 use_flags:
-- -prefix
 - -test
 - introspection
+- prefix
 requires:
 - name: ca-certificates
   version: '>=0'
