net-libs-2.4/libsoup: Move to race base-gtk2

--- a/packages/atoms/base-gtk2/net-libs-0.7/rest/build.yaml
+++ b/packages/atoms/base-gtk2/net-libs-0.7/rest/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: cups
+- name: libevent
   version: '>=0'
-  category: net-print
+  category: dev-libs
