--- a/packages/atoms/base-gtk2/dev-libs/libgusb/definition.yaml
+++ b/packages/atoms/base-gtk2/dev-libs/libgusb/definition.yaml
@@ -1,9 +1,9 @@
 name: libgusb
-version: 0.3.0+1
+version: 0.3.0
 category: dev-libs
 use_flags:
-- -vala
 - introspection
+- vala
 requires:
 - name: gobject-introspection
   version: '>=0'
