base-gtk: Review build order

--- a/packages/atoms/base-gtk/app-text/libpaper/build.yaml
+++ b/packages/atoms/base-gtk/app-text/libpaper/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libgudev
+- name: elogind
   version: '>=0'
-  category: virtual
+  category: sys-auth
