--- a/packages/atoms/base-gtk/dev-libs/atk/build.yaml
+++ b/packages/atoms/base-gtk/dev-libs/atk/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: doxygen
+- name: at-spi2-core
   version: '>=0'
-  category: app-doc
+  category: app-accessibility-2
