--- a/packages/atoms/base-gtk/media-libs/jbig2dec/build.yaml
+++ b/packages/atoms/base-gtk/media-libs/jbig2dec/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: xdg-utils
+- name: lcms
   version: '>=0'
-  category: x11-misc
+  category: media-libs-2
