--- a/packages/atoms/base-gtk/net-libs/libpsl/build.yaml
+++ b/packages/atoms/base-gtk/net-libs/libpsl/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: ghostscript-gpl
+- name: macaroni-funtoo-race6
   version: '>=0'
-  category: app-text
+  category: seed
