--- a/packages/atoms/base-gtk/virtual/libgudev/build.yaml
+++ b/packages/atoms/base-gtk/virtual/libgudev/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: polkit
+- name: libgudev
   version: '>=0'
-  category: sys-auth
+  category: dev-libs
