--- a/packages/atoms/base-gtk/app-accessibility-2/at-spi2-atk/build.yaml
+++ b/packages/atoms/base-gtk/app-accessibility-2/at-spi2-atk/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libxkbcommon
+- name: atk
   version: '>=0'
-  category: x11-libs
+  category: dev-libs
