--- a/packages/atoms/base-gtk/dev-libs/libgudev/build.yaml
+++ b/packages/atoms/base-gtk/dev-libs/libgudev/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: spidermonkey
+- name: macaroni-funtoo-race6
   version: '>=0'
-  category: dev-lang-78
+  category: seed
