--- a/packages/atoms/base-gtk/media-libs-2/openjpeg/build.yaml
+++ b/packages/atoms/base-gtk/media-libs-2/openjpeg/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gdk-pixbuf
+- name: dbus
   version: '>=0'
-  category: x11-libs-2
+  category: sys-apps
