--- a/packages/atoms/base-gtk/media-libs/jasper/build.yaml
+++ b/packages/atoms/base-gtk/media-libs/jasper/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: at-spi2-core
+- name: macaroni-funtoo-race6
   version: '>=0'
-  category: app-accessibility-2
+  category: seed
