--- a/packages/atoms/base-gtk/net-dns/libidn/build.yaml
+++ b/packages/atoms/base-gtk/net-dns/libidn/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: lcms
+- name: openjpeg
   version: '>=0'
   category: media-libs-2
