--- a/packages/atoms/base-gtk/net-print/cups/build.yaml
+++ b/packages/atoms/base-gtk/net-print/cups/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libpsl
+- name: dbus
   version: '>=0'
-  category: net-libs
+  category: sys-apps
