--- a/packages/atoms/base-gtk/sys-apps/dbus/build.yaml
+++ b/packages/atoms/base-gtk/sys-apps/dbus/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libidn
+- name: xdg-utils
   version: '>=0'
-  category: net-dns
+  category: x11-misc
