--- a/packages/atoms/base-gtk/sys-auth/elogind/build.yaml
+++ b/packages/atoms/base-gtk/sys-auth/elogind/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libgusb
+- name: spidermonkey
   version: '>=0'
-  category: dev-libs
+  category: dev-lang-78
