--- a/packages/atoms/base-gtk/x11-libs/libxkbcommon/build.yaml
+++ b/packages/atoms/base-gtk/x11-libs/libxkbcommon/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: atk
+- name: doxygen
   version: '>=0'
-  category: dev-libs
+  category: app-doc
