--- a/packages/atoms/base-gtk/x11-misc/xdg-utils/build.yaml
+++ b/packages/atoms/base-gtk/x11-misc/xdg-utils/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libpaper
+- name: jbig2dec
   version: '>=0'
-  category: app-text
+  category: media-libs
