--- a/packages/atoms/base-gtk2/dev-python/dbus-python/build.yaml
+++ b/packages/atoms/base-gtk2/dev-python/dbus-python/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: pygobject
+- name: rest
   version: '>=0'
-  category: dev-python-3
+  category: net-libs-0.7
