--- a/packages/atoms/base-gtk2/dev-python/pycairo/build.yaml
+++ b/packages/atoms/base-gtk2/dev-python/pycairo/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libepoxy
+- name: libsoup
   version: '>=0'
-  category: media-libs
+  category: net-libs-2.4
