--- a/packages/atoms/base-gtk2/media-fonts/noto-emoji/build.yaml
+++ b/packages/atoms/base-gtk2/media-fonts/noto-emoji/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: zopfli
+- name: macaroni-funtoo-race7
   version: '>=0'
-  category: app-arch
+  category: seed
