--- a/packages/atoms/base-gtk2/dev-libs-0.6/libcroco/build.yaml
+++ b/packages/atoms/base-gtk2/dev-libs-0.6/libcroco/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: dbus-python
+- name: gtk+
   version: '>=0'
-  category: dev-python
+  category: x11-libs-3
