--- a/packages/atoms/base-gtk2/dev-python-3/pygobject/build.yaml
+++ b/packages/atoms/base-gtk2/dev-python-3/pygobject/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gtk+
+- name: dbus-python
   version: '>=0'
-  category: x11-libs-3
+  category: dev-python
