--- a/packages/atoms/base-gtk2/media-libs/libepoxy/build.yaml
+++ b/packages/atoms/base-gtk2/media-libs/libepoxy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race7
+- name: xmltoman
   version: '>=0'
-  category: seed
+  category: app-doc
