--- a/packages/atoms/base-gtk2/x11-misc/colord/build.yaml
+++ b/packages/atoms/base-gtk2/x11-misc/colord/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libdaemon
+- name: libepoxy
   version: '>=0'
-  category: dev-libs
+  category: media-libs
