gnome-base-2/librsvg: Bump v.2.48.8+2

--- a/packages/atoms/base-gtk2/gnome-base-2/librsvg/definition.yaml
+++ b/packages/atoms/base-gtk2/gnome-base-2/librsvg/definition.yaml
@@ -1,9 +1,9 @@
 name: librsvg
-version: 2.48.8+1
+version: 2.48.8+2
 category: gnome-base-2
 use_flags:
-- -vala
 - introspection
+- vala
 - tools
 requires:
 - name: libcroco
