toolchain/base-gtk2: Update rdeps

--- a/packages/toolchain/base-gtk2/definition.yaml
+++ b/packages/toolchain/base-gtk2/definition.yaml
@@ -30,6 +30,9 @@ requires:
   - name: libevent
     category: dev-libs
     version: '>=0'
+  - name: libgusb
+    category: dev-libs
+    version: '>=0'
   - name: libyaml
     category: dev-libs
     version: '>=0'
@@ -66,6 +69,12 @@ requires:
   - name: avahi
     category: net-dns
     version: '>=0'
+  - name: rest
+    category: net-libs-0.7
+    version: '>=0'
+  - name: libsoup
+    category: net-libs-2.4
+    version: '>=0'
   - name: cups-filters
     category: net-print
     version: '>=0'
@@ -77,4 +86,7 @@ requires:
     version: '>=0'
   - name: colord
     category: x11-misc
+    version: '>=0'
+  - name: gnome-themes-standard
+    category: x11-themes
     version: '>=0'
