base-gtk2: Review build order

--- a/packages/atoms/base-gtk2/app-text/poppler/build.yaml
+++ b/packages/atoms/base-gtk2/app-text/poppler/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libcroco
+- name: macaroni-funtoo-race7
   version: '>=0'
-  category: dev-libs-0.6
+  category: seed
