--- a/packages/atoms/base-gtk2/dev-libs-0.6/libcroco/build.yaml
+++ b/packages/atoms/base-gtk2/dev-libs-0.6/libcroco/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gtk+
+- name: vala
   version: '>=0'
-  category: x11-libs-3
+  category: dev-lang-0.54
