--- a/packages/atoms/base-gtk2/dev-libs/libyaml/build.yaml
+++ b/packages/atoms/base-gtk2/dev-libs/libyaml/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: vala
+- name: pygobject
   version: '>=0'
-  category: dev-lang-0.54
+  category: dev-python-3
