--- a/packages/atoms/base-gtk2/dev-libs/appstream-glib/build.yaml
+++ b/packages/atoms/base-gtk2/dev-libs/appstream-glib/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gcab
+- name: gtk+
   version: '>=0'
-  category: app-arch
+  category: x11-libs-3
