--- a/packages/atoms/base-gtk2/net-dns/avahi/build.yaml
+++ b/packages/atoms/base-gtk2/net-dns/avahi/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: poppler
+- name: gtk+
   version: '>=0'
-  category: app-text
+  category: x11-libs-3
