--- a/packages/atoms/base-gtk2/net-libs-2.4/libsoup/build.yaml
+++ b/packages/atoms/base-gtk2/net-libs-2.4/libsoup/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race7
+- name: vala
   version: '>=0'
-  category: seed
+  category: dev-lang-0.54
