--- a/packages/atoms/base-gtk2/x11-libs-3/gtk+/build.yaml
+++ b/packages/atoms/base-gtk2/x11-libs-3/gtk+/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: pygobject
+- name: gcab
   version: '>=0'
-  category: dev-python-3
+  category: app-arch
