gnome-base-2/librsvg: Bump v.2.48.8+3

--- a/packages/atoms/base-gtk2/gnome-base-2/librsvg/build.yaml
+++ b/packages/atoms/base-gtk2/gnome-base-2/librsvg/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gtk+
+- name: libcroco
   version: '>=0'
-  category: x11-libs-2
+  category: dev-libs-0.6
