--- a/packages/atoms/base-gtk2/media-gfx/graphviz/build.yaml
+++ b/packages/atoms/base-gtk2/media-gfx/graphviz/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Needed to break dep cycle between vala -> graphviz -> librsvg -> vala
+- >-
+  USE="introspection memsaver tools -vala" emerge librsvg -j
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
@@ -24,6 +27,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: librsvg
+- name: gtk+
   version: '>=0'
-  category: gnome-base-2
+  category: x11-libs-2
