toolchain/base-net2: Update rdeps

--- a/packages/toolchain/base-net2/definition.yaml
+++ b/packages/toolchain/base-net2/definition.yaml
@@ -6,6 +6,9 @@ requires:
   - name: metalog
     category: app-admin
     version: '>=0'
+  - name: eselect-blas
+    category: app-eselect
+    version: '>=0'
   - name: libexttextcat
     category: app-text
     version: '>=0'
@@ -13,6 +16,9 @@ requires:
     category: dev-db
     version: '>=0'
   - name: fstrm
+    category: dev-libs
+    version: '>=0'
+  - name: liblinear
     category: dev-libs
     version: '>=0'
   - name: libmaxminddb
@@ -81,6 +87,9 @@ requires:
   - name: postfix
     category: mail-mta
     version: '>=0'
+  - name: nmap
+    category: net-analyzer
+    version: '>=0'
   - name: bind
     category: net-dns
     version: '>=0'
@@ -107,6 +116,12 @@ requires:
     version: '>=0'
   - name: haproxy
     category: net-proxy
+    version: '>=0'
+  - name: blas-reference
+    category: sci-libs
+    version: '>=0'
+  - name: blas
+    category: virtual
     version: '>=0'
   - name: logger
     category: virtual
