--- a/packages/atoms/base-net2/virtual/blas/build.yaml
+++ b/packages/atoms/base-net2/virtual/blas/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race14
+- name: blas-reference
   version: '>=0'
-  category: seed
+  category: sci-libs
