--- a/portage-converter/base-net2.yaml
+++ b/portage-converter/base-net2.yaml
@@ -416,6 +416,41 @@ artefacts:
   packages:
     - dev-python/twisted
 
+- tree: packages/atoms/base-net2
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: seed
+          name: macaroni-funtoo-race14
+  packages:
+    - app-eselect/eselect-blas
+
+- tree: packages/atoms/base-net2
+  mutations:
+    buildtime_deps:
+      packages:
+        - category: sci-libs
+          name: blas-reference
+  packages:
+    - virtual/blas
+
+- tree: packages/atoms/base-net2
+  packages:
+    - dev-libs/liblinear
+
+- tree: packages/atoms/base-net2
+  uses:
+    disabled:
+      - debug
+      - test
+      - doc
+      - static-libs
+      - ldap
+      - libressl
+      - libssh2
+  packages:
+    - net-analyzer/nmap
+
 
 include_layers:
 - layers/macaroni-funtoo-race14.yaml
