net-analyzer/nmap: Bump v.7.91+1

--- a/packages/atoms/base-net2/net-analyzer/nmap/build.yaml
+++ b/packages/atoms/base-net2/net-analyzer/nmap/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp nmap-7.91.ebuild /var/git/meta-repo/kits/net-kit/net-analyzer/nmap/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
