--- a/packages/atoms/base-net2/net-analyzer/nmap/definition.yaml
+++ b/packages/atoms/base-net2/net-analyzer/nmap/definition.yaml
@@ -1,5 +1,5 @@
 name: nmap
-version: "7.91"
+version: 7.91+1
 category: net-analyzer
 use_flags:
 - -libressl
@@ -8,6 +8,7 @@ use_flags:
 - nse
 - ssl
 - system-lua
+- blas
 requires:
 - name: liblinear
   version: '>=0'
