seed/macaroni-funtoo-race15: Bump v.0.20230910

--- a/packages/seeds/macaroni-funtoo-race15/build.yaml
+++ b/packages/seeds/macaroni-funtoo-race15/build.yaml
@@ -75,6 +75,7 @@ steps:
   toolchain/release
   toolchain/base-net2
   toolchain/nvidia
+  toolchain/base-multimedia3
   &&
   luet cleanup &&
   /usr/bin/gcc-config 1 &&
