toolchain/base-net2: Update rdeps

--- a/packages/toolchain/base-net2/definition.yaml
+++ b/packages/toolchain/base-net2/definition.yaml
@@ -96,6 +96,9 @@ requires:
   - name: bind-tools
     category: net-dns
     version: '>=0'
+  - name: coredns
+    category: net-dns
+    version: '>=0'
   - name: dnssec-root
     category: net-dns
     version: '>=0'
@@ -104,6 +107,9 @@ requires:
     version: '>=0'
   - name: dovecot
     category: net-mail
+    version: '>=0'
+  - name: chrony
+    category: net-misc
     version: '>=0'
   - name: openvswitch
     category: net-misc
@@ -116,6 +122,9 @@ requires:
     version: '>=0'
   - name: haproxy
     category: net-proxy
+    version: '>=0'
+  - name: strongswan
+    category: net-vpn
     version: '>=0'
   - name: blas-reference
     category: sci-libs
