toolchain/base-multimedia3: Update rdeps

--- a/packages/toolchain/base-multimedia3/definition.yaml
+++ b/packages/toolchain/base-multimedia3/definition.yaml
@@ -15,11 +15,59 @@ requires:
   - name: libmpeg2
     category: media-libs
     version: '>=0'
+  - name: libquicktime
+    category: media-libs
+    version: '>=0'
   - name: libreplaygain
     category: media-libs
     version: '>=0'
   - name: portaudio
     category: media-libs
+    version: '>=0'
+  - name: taglib
+    category: media-libs
+    version: '>=0'
+  - name: gst-plugins-libmms
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-meta
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-modplug
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-mpeg2dec
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-mpg123
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-mplex
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-oss
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-pulse
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-resindvd
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-soup
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-taglib
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-vaapi
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-wavpack
+    category: media-plugins-1.0
+    version: '>=0'
+  - name: gst-plugins-x264
+    category: media-plugins-1.0
     version: '>=0'
   - name: live
     category: media-plugins
@@ -29,6 +77,9 @@ requires:
     version: '>=0'
   - name: musepack-tools
     category: media-sound
+    version: '>=0'
+  - name: mjpegtools
+    category: media-video-1
     version: '>=0'
   - name: vlc
     category: media-video
