--- a/packages/atoms/base-net2/net-vpn/strongswan/definition.yaml
+++ b/packages/atoms/base-net2/net-vpn/strongswan/definition.yaml
@@ -1,5 +1,5 @@
 name: strongswan
-version: 5.9.11
+version: 5.9.11+1
 category: net-vpn
 use_flags:
 - -gcrypt
@@ -14,6 +14,18 @@ use_flags:
 - openssl
 - pam
 - sqlite
+- strongswan_plugins_lookip
+- strongswan_plugins_systime
+- strongswan_plugins_led
+- strongswan_plugins_blowfish
+- strongswan_plugins_ccm
+- strongswan_plugins_ctr
+- strongswan_plugins_error-notify
+- strongswan_plugins_ha
+- strongswan_plugins_ipseckey
+- strongswan_plugins_save-keys
+- strongswan_plugins_whitelist
+- strongswan_plugins_xauth-noauth
 requires:
 - name: mysql-connector-c
   version: '>=0'
