media-plugins-1.0/gst-plugins-meta: Bump v.1.18.4+1

--- a/packages/atoms/base-multimedia3/media-plugins-1.0/gst-plugins-meta/definition.yaml
+++ b/packages/atoms/base-multimedia3/media-plugins-1.0/gst-plugins-meta/definition.yaml
@@ -1,5 +1,5 @@
 name: gst-plugins-meta
-version: 1.18.4
+version: 1.18.4+1
 category: media-plugins-1.0
 use_flags:
 - -libass
@@ -30,6 +30,11 @@ use_flags:
 - vpx
 - wavpack
 - x264
+- vorbis
+- theora
+- X
+- alsa
+- ogg
 requires:
 - name: gst-plugins-a52dec
   version: '>=0'
