net-libs/gupnp: Fix installation of slot 0

--- a/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
@@ -57,7 +57,7 @@ labels:
     dev-lang/vala:0.42[vapigen(+)] dev-lang/vala:0.40[vapigen(+)] dev-lang/vala:0.36[vapigen(+)]
     ) ) connman? ( >=dev-libs/glib-2.62.2:2[-mgorny(-)] ) networkmanager? ( >=dev-libs/glib-2.62.2:2[-mgorny(-)]
     ) !net-libs/gupnp-vala
-  emerge.packages: net-libs/gupnp
+  emerge.packages: net-libs/gupnp:0
   kit: gnome-kit
   original.package.name: net-libs/gupnp
   original.package.slot: "0"
