--- a/packages/atoms/base-gnome4/app-cdr/brasero/definition.yaml
+++ b/packages/atoms/base-gnome4/app-cdr/brasero/definition.yaml
@@ -1,5 +1,5 @@
 name: brasero
-version: 3.12.2
+version: 3.12.2+1
 category: app-cdr
 use_flags:
 - -packagekit
@@ -10,6 +10,7 @@ use_flags:
 - nautilus
 - playlist
 - tracker
+- mp3
 requires:
 - name: libburn
   version: '>=0'
