--- a/packages/atoms/base-gnome4/gnome-extra/gnome-shell-extensions/definition.yaml
+++ b/packages/atoms/base-gnome4/gnome-extra/gnome-shell-extensions/definition.yaml
@@ -1,5 +1,5 @@
 name: gnome-shell-extensions
-version: 3.36.7
+version: 3.36.7+1
 category: gnome-extra
 requires:
 - name: eselect-gnome-shell-extensions
