net-libs/gupnp: Bump v.1.0.3+1

--- a/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
@@ -1,11 +1,11 @@
 name: gupnp
-version: 1.0.3
+version: 1.0.3+1
 category: net-libs
 use_flags:
+- -connman
 - -python_single_target_python3_10
 - -python_single_target_python3_7
 - -python_single_target_python3_8
-- connman
 - introspection
 - networkmanager
 - python_single_target_python2_7
