--- a/packages/atoms/base-gnome4/net-libs-1.2/gupnp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs-1.2/gupnp/definition.yaml
@@ -1,11 +1,11 @@
 name: gupnp
-version: 1.2.4
+version: 1.2.4+1
 category: net-libs-1.2
 use_flags:
+- -connman
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
-- connman
 - introspection
 - networkmanager
 - python_targets_python3_9
