gnome-base/gnome: Bump v.3.36.2+1

--- a/packages/atoms/base-gnome4/gnome-base/gnome/definition.yaml
+++ b/packages/atoms/base-gnome4/gnome-base/gnome/definition.yaml
@@ -1,10 +1,11 @@
 name: gnome
-version: 3.36.2
+version: 3.36.2+1
 category: gnome-base
 use_flags:
 - -accessibility
 - -extras
 - classic
+- eds
 requires:
 - name: gdm
   version: '>=0'
