gnome-base-3.0/gnome-core-libs: Bump v.3.36.0+1

--- a/packages/atoms/base-gnome4/gnome-base-3.0/gnome-core-libs/definition.yaml
+++ b/packages/atoms/base-gnome4/gnome-base-3.0/gnome-core-libs/definition.yaml
@@ -1,8 +1,9 @@
 name: gnome-core-libs
-version: 3.36.0
+version: 3.36.0+1
 category: gnome-base-3.0
 use_flags:
 - python
+- eds
 requires:
 - name: pygobject
   version: '>=0'
