gnome-base-3.0/gnome-core-apps: Bump v.3.36.0+1

--- a/packages/atoms/base-gnome4/gnome-base-3.0/gnome-core-apps/definition.yaml
+++ b/packages/atoms/base-gnome4/gnome-base-3.0/gnome-core-apps/definition.yaml
@@ -1,9 +1,10 @@
 name: gnome-core-apps
-version: 3.36.0
+version: 3.36.0+1
 category: gnome-base-3.0
 use_flags:
 - bluetooth
 - cdr
+- eds
 requires:
 - name: brasero
   version: '>=0'
@@ -32,6 +33,9 @@ requires:
 - name: gnome-session
   version: '>=0'
   category: gnome-base
+- name: evolution-data-server
+  version: '>=0'
+  category: gnome-extra
 - name: gnome-contacts
   version: '>=0'
   category: gnome-extra
