atoms/base-gnome4: Review build order

--- a/packages/atoms/base-gnome4/media-libs-2.0/gupnp-dlna/build.yaml
+++ b/packages/atoms/base-gnome4/media-libs-2.0/gupnp-dlna/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gupnp
+- name: gssdp
   version: '>=0'
-  category: net-libs-1.2
+  category: net-libs
