net-libs/gssdp: Bump v.1.0.3+1

--- a/packages/atoms/base-gnome4/net-libs/gssdp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs/gssdp/definition.yaml
@@ -1,5 +1,5 @@
 name: gssdp
-version: 1.0.3
+version: 1.0.3+1
 category: net-libs
 use_flags:
 - gtk
@@ -38,7 +38,7 @@ labels:
     dev-lang/vala:0.48[vapigen(+)] dev-lang/vala:0.46[vapigen(+)] dev-lang/vala:0.44[vapigen(+)]
     dev-lang/vala:0.42[vapigen(+)] dev-lang/vala:0.40[vapigen(+)] dev-lang/vala:0.36[vapigen(+)]
     ) >=dev-libs/gobject-introspection-1.62.0:= ) !<net-libs/gupnp-vala-0.10.3'
-  emerge.packages: net-libs/gssdp
+  emerge.packages: net-libs/gssdp:0
   kit: gnome-kit
   original.package.name: net-libs/gssdp
   original.package.slot: "0"
