dev-libs/folks: Bump v.0.14.0+1

--- a/packages/atoms/base-gnome4/dev-libs/folks/definition.yaml
+++ b/packages/atoms/base-gnome4/dev-libs/folks/definition.yaml
@@ -1,18 +1,16 @@
 name: folks
-version: 0.14.0
+version: 0.14.0+1
 category: dev-libs
 use_flags:
 - -test
+- -tracker
 - -zeitgeist
 - bluetooth
 - eds
 - prefix
 - telepathy
-- tracker
+- utils
 requires:
-- name: tracker
-  version: '>=0'
-  category: app-misc
 - name: libgee
   version: '>=0'
   category: dev-libs-0.8
