--- a/packages/atoms/base-gnome4/gnome-extra/gnome-contacts/build.yaml
+++ b/packages/atoms/base-gnome4/gnome-extra/gnome-contacts/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+# Fix support of vala 0.54
+- >-
+  mkdir -p /etc/portage/patches/gnome-extra/gnome-contacts/ &&
+  cp -vf patches/* /etc/portage/patches/gnome-extra/gnome-contacts/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
