media-sound/gnome-music: Bump v.3.36.6+2

--- a/packages/atoms/base-gnome4/media-sound/gnome-music/build.yaml
+++ b/packages/atoms/base-gnome4/media-sound/gnome-music/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libmediaart
+- name: grilo-plugins
   version: '>=0'
-  category: media-libs-2.0
+  category: media-plugins-0.3
