dev-libs-3.0/gmime: Bump v.3.2.7+1

--- a/packages/atoms/base-net/dev-libs-3.0/gmime/definition.yaml
+++ b/packages/atoms/base-net/dev-libs-3.0/gmime/definition.yaml
@@ -1,12 +1,12 @@
 name: gmime
-version: 3.2.7
+version: 3.2.7+1
 category: dev-libs-3.0
 use_flags:
 - -doc
 - -idn
 - -test
-- -vala
 - crypt
+- vala
 requires:
 - name: gpgme
   version: '>=0'
