atoms/base-gnome4: Update build order

--- a/packages/atoms/base-gnome4/app-text/libgxps/build.yaml
+++ b/packages/atoms/base-gnome4/app-text/libgxps/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: djvu
+- name: imagemagick
   version: '>=0'
-  category: app-text
+  category: media-gfx
