--- a/packages/atoms/base-gnome4/app-text/djvu/build.yaml
+++ b/packages/atoms/base-gnome4/app-text/djvu/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race15
+- name: cblas
   version: '>=0'
-  category: seed
+  category: virtual
