atoms/base-gnome4: Review build order

--- a/packages/atoms/base-gnome4/virtual/lapack/build.yaml
+++ b/packages/atoms/base-gnome4/virtual/lapack/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: potrace
+- name: cblas
   version: '>=0'
-  category: media-gfx
+  category: virtual
