--- a/packages/atoms/base-gnome4/dev-libs/imath/build.yaml
+++ b/packages/atoms/base-gnome4/dev-libs/imath/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libwmf
+- name: numpy
   version: '>=0'
-  category: media-libs
+  category: dev-python
