--- a/packages/atoms/base-gnome4/dev-python/numpy/build.yaml
+++ b/packages/atoms/base-gnome4/dev-python/numpy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: lapack
+- name: jbigkit
   version: '>=0'
-  category: virtual
+  category: media-libs
