--- a/packages/atoms/base-gnome4/media-libs/jbigkit/build.yaml
+++ b/packages/atoms/base-gnome4/media-libs/jbigkit/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: numpy
+- name: potrace
   version: '>=0'
-  category: dev-python
+  category: media-gfx
