--- a/packages/atoms/base-gnome4/virtual/opencl/build.yaml
+++ b/packages/atoms/base-gnome4/virtual/opencl/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: openexr
+- name: libwmf
   version: '>=0'
   category: media-libs
